# EncProt

./: CMakeLists.txt  libEncProt.lib
include/EncProt/: encprot.h  libdef.h
include/openssl/: opensslconf.h
lib/x86_64/WIN32/: libcrypto.lib  libssl.lib
src/: encfile.cpp  encprot.cpp  main.cpp
